test/files/neg/subkinding.check
subkinding.scala:5: error: kinds of the type arguments (Test1.C) do not conform to the expected kinds of the type parameters (type B) in trait A.
Test1.C's type parameters do not match type B's expected parameters:
type Y's bounds <: X are stricter than type S's declared bounds >: Nothing <: Any
  type T = A[C]
           ^
subkinding.scala:12: error: kinds of the type arguments (Test2.C) do not conform to the expected kinds of the type parameters (type T) in trait A.
Test2.C's type parameters do not match type T's expected parameters:
type _ is invariant, but type _ is declared covariant
  type T = A[C]
           ^
subkinding.scala:20: error: kinds of the type arguments (Test3.Adapter,T) do not conform to the expected kinds of the type parameters (type A,type S) in trait Mixin.
Test3.Adapter's type parameters do not match type A's expected parameters:
type B (in trait Adapter)'s bounds <: Test3.Box[T] are stricter than type B's declared bounds <: Test3.Box[S]
  trait Super[T] extends Mixin[Adapter, T]
                         ^
3 errors
